--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgCatchOfTheDay</title>
+  <title>Catch of the Day</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <input type="checkbox" id="fold">
+  <label for="fold">Fold</label>
+
+  <div id="main">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
